--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <script>
     // URL do arquivo JSON
-    const dataUrl = 'https://example.com/slides-data.json';
+    const dataUrl = 'https://drive.google.com/file/d/10qbyQsBqPmETvP9FQBsj2ikZ1Rd8eMNG/view?usp=sharing';
 
     fetch(dataUrl)
       .then(response => response.json())
